[gd_scene load_steps=23 format=3 uid="uid://cj8yr0m0pkqln"]

[ext_resource type="Script" path="res://core/space/planet.gd" id="1_m3qu6"]
[ext_resource type="Shader" path="res://core/space/shaders/planet/surface.gdshader" id="2_aukfo"]
[ext_resource type="Texture2D" uid="uid://cuxh1d2127cq3" path="res://scenes/assets/icon.svg" id="2_xlwtg"]
[ext_resource type="Script" path="res://ui/components/inspect_component.gd" id="3_06rrq"]
[ext_resource type="Shader" path="res://core/space/shaders/planet/ocean.gdshader" id="5_p5u1b"]
[ext_resource type="Shader" path="res://core/space/shaders/planet/atmosphere.gdshader" id="6_py6qu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_26rer"]
shader = ExtResource("2_aukfo")
shader_parameter/base_color = Vector4(1, 1, 1, 1)
shader_parameter/aspect_ratio = 1.0
shader_parameter/rotation_speed = 1.0
shader_parameter/light_direction_degrees = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2h0o0"]
radius = 0.228207

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cddr2"]
shader = ExtResource("2_aukfo")
shader_parameter/base_color = Vector4(1, 1, 1, 1)
shader_parameter/aspect_ratio = 1.0
shader_parameter/rotation_speed = 1.0
shader_parameter/light_direction_degrees = 0.0

[sub_resource type="Gradient" id="Gradient_cklas"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a6tav"]
gradient = SubResource("Gradient_cklas")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ncjj"]
shader = ExtResource("2_aukfo")
shader_parameter/base_color = Vector4(0.09, 1, 0.34, 1)
shader_parameter/aspect_ratio = 3.0
shader_parameter/rotation_speed = 0.2
shader_parameter/light_direction_degrees = 0.0

[sub_resource type="FastNoiseLite" id="FastNoiseLite_a3kp2"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xcaty"]
width = 1024
seamless = true
noise = SubResource("FastNoiseLite_a3kp2")

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_utrol"]
width = 1024
seamless = true
as_normal_map = true
noise = SubResource("FastNoiseLite_a3kp2")

[sub_resource type="CanvasTexture" id="CanvasTexture_nkd71"]
diffuse_texture = SubResource("NoiseTexture2D_xcaty")
normal_texture = SubResource("NoiseTexture2D_utrol")
texture_filter = 3
texture_repeat = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lkhdc"]
shader = ExtResource("5_p5u1b")
shader_parameter/base_color = Vector4(-1.415, -0.015, 1, 1)
shader_parameter/aspect_ratio = 3.0
shader_parameter/rotation_speed = 0.2
shader_parameter/light_direction_degrees = 0.0
shader_parameter/ocean_surface_coverage = 0.6

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5d5yl"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_te2mw"]
width = 1024
seamless = true
noise = SubResource("FastNoiseLite_5d5yl")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cuagt"]
shader = ExtResource("6_py6qu")
shader_parameter/base_color = Vector4(0.605, 0.855, 3.6, 1)
shader_parameter/aspect_ratio = 3.0
shader_parameter/rotation_speed = 0.15
shader_parameter/light_direction_degrees = 0.0
shader_parameter/cloud_coverage = 0.405

[sub_resource type="FastNoiseLite" id="FastNoiseLite_juk7g"]
noise_type = 2
seed = 3
frequency = 0.025

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_1ayuu"]
width = 1024
seamless = true
noise = SubResource("FastNoiseLite_juk7g")

[node name="Planet" type="Node2D"]
script = ExtResource("1_m3qu6")
metadata/_edit_vertical_guides_ = [-596.0]

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_26rer")
scale = Vector2(4, 16)
texture = ExtResource("2_xlwtg")

[node name="Hitbox" type="Area2D" parent="Sprite"]
scale = Vector2(128, 128)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Hitbox"]
scale = Vector2(2, 1)
shape = SubResource("CircleShape2D_2h0o0")

[node name="OceanLayer" type="Sprite2D" parent="Sprite"]
z_index = 1
material = SubResource("ShaderMaterial_cddr2")
use_parent_material = true

[node name="InspectComponent" type="CanvasLayer" parent="." node_paths=PackedStringArray("trigger_area")]
script = ExtResource("3_06rrq")
trigger_area = NodePath("../Sprite/Hitbox")
can_camera_focus = true
tt_title_text = "Planet Name"
tt_subtitle_text = "World Class"
inspect_dialog_scene = "res://ui/dialogs/space_inspect_dialog.tscn"

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-1213, -823)
energy = 9.36
blend_mode = 2
range_item_cull_mask = 2
texture = SubResource("GradientTexture2D_a6tav")
texture_scale = 16.0

[node name="spritetest" type="Sprite2D" parent="."]
light_mask = 2
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_1ncjj")
position = Vector2(-1206, -1036)
scale = Vector2(0.5, 1)
texture = SubResource("CanvasTexture_nkd71")

[node name="ColorRect" type="ColorRect" parent="spritetest"]
show_behind_parent = true
offset_left = -330.0
offset_top = -178.0
offset_right = 310.0
offset_bottom = 154.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="oceanspritetest" type="Sprite2D" parent="spritetest"]
light_mask = 2
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_lkhdc")
texture = SubResource("NoiseTexture2D_te2mw")

[node name="atmossprite" type="Sprite2D" parent="spritetest"]
light_mask = 2
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_cuagt")
texture = SubResource("NoiseTexture2D_1ayuu")

[connection signal="input_event" from="Sprite/Hitbox" to="." method="_on_hitbox_input_event"]
[connection signal="mouse_entered" from="Sprite/Hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Hitbox" to="." method="_on_hitbox_mouse_exited"]
